<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/photo_1"
        android:layout_marginTop="70dp"
        android:layout_marginStart="130dp"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:fontFamily="@font/reaview_mirror"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_email_black_24dp"

        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:fontFamily="@font/reaview_mirror"
        android:hint="@string/password"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawableStart="@drawable/ic_lock"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/reaview_mirror"
        android:text="@string/forgot"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:fontFamily="@font/reaview_mirror"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_fill_custom"
        android:textColor="@color/putih"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginwith"
        android:fontFamily="@font/reaview_mirror"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/search"
            android:scaleType="centerCrop"
            android:background="@android:color/transparent"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/search"
            android:background="@android:color/transparent"
            android:layout_gravity="center"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_graphic"
            android:background="@android:color/transparent"
            android:layout_gravity="center"/>
    </LinearLayout>

    <!---->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->
    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
    <!--android:id="@+id/tvkadal"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="kadall"-->
    <!--android:textSize="40dp"-->
    <!--/>-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="komodo"-->
    <!--android:textSize="40dp"-->
    <!--android:layout_above="@+id/tvkadal"/>-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="memedi"-->
    <!--android:textSize="40dp"/>-->

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="@string/login"-->
    <!--android:fontFamily="@font/reaview_mirror"-->
    <!--android:textColor="@color/putih"-->
    <!--android:background="@drawable/bg_fill_custom"/>-->

    <!--</LinearLayout>-->
    <!--&lt;!&ndash;&ndash;&gt;-->
    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/colorPrimary"-->
    <!--android:layout_weight="1"/>-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/colorPrimaryDark"-->
    <!--android:layout_weight="1"/>-->


    <!--<TextView-->
    <!--android:id="@+id/tvkadal"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="kadall"-->
    <!--android:textSize="40dp" -->
    <!--/>-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="komodo"-->
    <!--android:textSize="40dp"-->
    <!--android:layout_above="@+id/tvkadal"/>-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="memedi"-->
    <!--android:textSize="40dp"/>-->


    <!--<ImageButton-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:src="@drawable/ic_graphic"-->
    <!--android:background="@android:color/transparent"></ImageButton>-->
    <!--<EditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="majelis coding"-->
    <!--android:textColorHint="@color/colorPrimaryDark"-->
    <!--android:drawableStart="@drawable/ic_lock"-->
    <!--android:inputType="textCapWords"-->
    <!--android:drawablePadding="10dp"/>-->
    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:src="@drawable/photo_1"-->
    <!--android:scaleType="centerInside"    -->
    <!--/>-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="helo dunyaaa"-->
    <!--android:textSize="40dp"-->
    <!--android:textStyle="italic|bold"-->
    <!--android:textColor="@color/tosca"-->
    <!--android:textAlignment="textStart"-->
    <!--android:textAllCaps="false"-->
    <!---->
    />
</LinearLayout>